Parser/parser.py
#  Copyright (c) 2021, Alden Authors.
# All rights reserved.

# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:

# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.

# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.

# 3. Neither the name of Alden Org. nor the names of its
#    contributors may be used to endorse or promote products derived from
#    this software without specific prior written permission.

# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.


# File:
#   Parser/parser.py
# Author: 
#   Kehinde Akinsanya
# Created:
#   October 28, 2021
# Description:
#   This file contains the parser for the language.


from os import access, error, path
from re import split
from types import NoneType

from Parser.stringsWithArrows import *
from Token.token import Token
from Token import tokenList
from Lexer.lexer import Lexer
import sys
import re
sys.path.append('./Parser/')
# def match(pattern, text, pos_start, pos_end):
#     matches = []
#     if len(pattern) == 0:
#         return matches
#     if len(text) == 0:
#         return matches
#     for i in len(text):
#         if pattern[0] == text[i]:
#             string = text.substring(i, i+1)
#             if len(pattern) == 1:
#                 matches.append(string)
#             else:
#                 matches.append(match(pattern[1:], text[i+1:], i+1, i+1))
#     return matches

class Regex:
        def __init__(self):
            self.value = None

        def parse(self, text, pos_start, pos_end):
            wildcard_token = Token(tokenList.TT_WILDCARD, None, pos_start, pos_end)
            start_token = Token(tokenList.TT_START, None, pos_start, pos_end)
            end_token = Token(tokenList.TT_END, None, pos_start, pos_end)
            comma_token = Token(tokenList.TT_COMMA, None, pos_start, pos_end)
            arrow_token = Token(tokenList.TT_ARROW, None, pos_start, pos_end)
            plus_token = Token(tokenList.TT_PLUS, None, pos_start, pos_end)
            star_token = Token(tokenList.TT_STAR, None, pos_start, pos_end)
            question_token = Token(tokenList.QUESTION, None, pos_start, pos_end)
            pipe_token = Token(tokenList.TT_PIPE, None, pos_start, pos_end)
            
        def compile(self, pattern):
            self.pattern = re.compile(pattern)
            return self
        def match(self, text):
            return self.pattern.findall(text)
        def sub(self, pattern, text):
            return self.pattern.sub(pattern, text)

def lower(text):
    return text.islower()

def isOnlyLetters(text):
    return text.isalpha()

def isFirstLetterUpper(text):
    return text[0].isupper()               

    


class Program:
    def error():
        def Default(detail):
            if detail['exit']:
                Program.printErrorExit(Program.asString(detail))
            else:
                Program.printError(Program.asString(detail))

        def Syntax(detail):
            isDetail = {
                'name': 'SyntaxError',
                'type': 'invalid syntax',
                'message': detail['message'],
                'pos_start': detail['pos_start'],
                'pos_end': detail['pos_end'],
            }
            if detail['exit']:
                Program.printErrorExit(Program.asString(isDetail))
            else:
                Program.printError(Program.asString(isDetail))

        def Runtime(options):
            error = f'RuntimeError: {options["originator"]}, line {options["line"]}'
            Program.printErrorExit(error)
            
        def NameError(detail):
            isDetail = {
                'name': 'NameError',
                'type': 'name error',
                'message': detail['message'],
                'pos_start': detail['pos_start'],
                'pos_end': detail['pos_end'],
            }
            if detail['exit']:
                Program.printErrorExit(Program.asString(isDetail))
            else:
                Program.printError(Program.asString(isDetail))
            
        def KeyError(detail):
            isDetail = {
                'name': 'KeyError',
                'type': 'key error',
                'message': detail['message'],
                'pos_start': detail['pos_start'],
                'pos_end': detail['pos_end'],
            }
            if detail['exit']:
                Program.printErrorExit(Program.asString(isDetail))
            else:
                Program.printError(Program.asString(isDetail))
                
        def ValueError(detail):
            isDetail = {
                'name': 'ValueError',
                'type': 'value error',
                'message': detail['message'],
                'pos_start': detail['pos_start'],
                'pos_end': detail['pos_end'],
            }
            if detail['exit']:
                Program.printErrorExit(Program.asString(isDetail))
            else:
                Program.printError(Program.asString(isDetail))
        methods = {
            'Default': Default,
            'Syntax': Syntax,
            'Runtime': Runtime,
            'NameError': NameError,
            'KeyError': KeyError,
            'ValueError': ValueError,
        }
        return methods

    def printWithType(*args):
        for arg in args:
            print(str(type(arg)) + " <===> " + str(arg))

    def printError(arg):
        print(arg)

    def printErrorExit(arg):
        print(arg)
        sys.exit(1)

    def asString(detail):
        result = f'\nFile {detail["pos_start"].fileName}, line {detail["pos_start"].line + 1}'
        result += '\n\n' +  \
            stringsWithArrows(
                detail["pos_start"].fileText, detail["pos_start"], detail["pos_end"])
        result += f'\n{detail["name"]}: {detail["message"]}'
        return result


class StatementsNode:
    def __init__(self, elements, pos_start, pos_end):
        self.elements = elements
        self.pos_start = pos_start
        self.pos_end = pos_end


class NumberNode:
    def __init__(self, tok):
        self.tok = tok
        self.id = tok
        self.pos_start = self.tok.pos_start
        self.pos_end = self.tok.pos_end

    def __repr__(self):
        return f'{self.tok}'


class StringNode:
    def __init__(self, tok, arg=None):
        self.name = tok
        self.tok = tok
        self.id = tok
        self.arg = arg
        self.pos_start = self.tok.pos_start
        self.pos_end = self.tok.pos_end

    def __repr__(self):
        return f'{self.tok}'


class ObjectRefNode:
    def __init__(self, tok):
        self.tok = tok
        self.id = tok
        self.pos_start = self.tok.pos_start
        self.pos_end = self.tok.pos_end

    def __repr__(self):
        return f'{self.tok}'


class StringInterpNode:
    def __init__(self, expr, values_to_replace, string_to_interp, pos_start, pos_end, inter_pv=None):
        self.expr = expr
        self.values_to_replace = values_to_replace
        self.string_to_interp = string_to_interp
        self.inter_pv = inter_pv
        self.pos_start = pos_start
        self.pos_end = pos_end
        
    def __repr__(self):
        return f'{self.values_to_replace}'


class ListNode:
    def __init__(self, elements, pos_start, pos_end):
        self.elements = elements
        self.pos_start = pos_start
        self.pos_end = pos_end


class PairNode:
    def __init__(self, elements, pos_start, pos_end):
        self.elements = elements
        self.pos_start = pos_start
        self.pos_end = pos_end

       
class PipeNode:
    def __init__(self, elements, pos_start, pos_end):
        self.elements = elements
        self.pos_start = pos_start
        self.pos_end = pos_end 
    

class VarAssignNode:
    def __init__(self, variable_name_token, value_node, variable_keyword_token):
        self.variable_keyword_token = variable_keyword_token
        self.variable_name_token = variable_name_token
        self.id = variable_name_token
        self.value_node = value_node
        if type(self.variable_name_token).__name__ == "tuple":
            for t in self.variable_name_token:
                self.pos_start = t.pos_start
                self.pos_end = t.pos_end
        elif type(self.variable_name_token).__name__ == "list":
             for t in self.variable_name_token:
                self.pos_start = t.pos_start
                self.pos_end = t.pos_end


class VarAccessNode:
    def __init__(self, name, type=None):
        self.name = name
        self.id = name
        self.type = type
        self.pos_start = self.name.pos_start
        self.pos_end = self.name.pos_end

    def __repr__(self):
        return f'{self.name}'


class VarReassignNode:
    def __init__(self, name, value=None, operation=None):
        res = ParseResult()
        self.name = name
        self.id = name
        self.value = value
        self.operation = operation
        
        if self.name == "" or self.name == None:
            pass
        else:
            self.pos_start = self.name.pos_start
            self.pos_end = self.name.pos_end

    def __repr__(self):
        return f'{self.name}'


class PropertyNode:
    def __init__(self, name, property):
        self.name = name
        self.value = name.value if hasattr(name, 'value') else name
        self.id = name
        self.property = property
        self.pos_start = self.name.pos_start
        self.pos_end = self.name.pos_end
        
    def __repr__(self):
        return f'{self.property}'
    

class PropertySetNode:
    def __init__(self, name, property, value, type_=None):
        self.name = name
        self.id = name
        self.property = property
        self.value = value
        self.type_ = type_
        self.pos_start = self.name.pos_start
        self.pos_end = self.value.pos_end
        
    def __repr__(self):
        return f'{self.name}'


class IndexNode:
    def __init__(self, name, index, value=None,type_=None):
        self.name = name
        self.id = name
        self.index = index
        self.value = value
        self.type = type_
        self.pos_start = self.name.pos_start
        if index == None or index == "":
            res = ParseResult()
            return res.failure(Program.error()['Syntax']({
                    'pos_start': self.name.pos_start,
                    'pos_end': self.name.pos_end,
                    'message': "Expected index or slice expression",
                    'exit': False
                }))
        else:
            self.pos_end = self.index.pos_end
        
    def __repr__(self):
        return f'{self.name}'        
 
    
class SliceNode:
    def __init__(self, name, start, end, step=None, type=None):
        self.name = name
        self.id = name
        self.start = start
        self.end = end
        self.step = step
        self.type = type
        self.pos_start = self.name.pos_start
        self.pos_end = self.name.pos_end if self.end is None else self.end.pos_end
        
    def __repr__(self):
        return f'{self.name}'


class SpreadNode:
    def __init__(self, assign_token, name, value, pos_start, pos_end, _type=None):
        self.assign_token = assign_token
        self.name = name
        self.id = name
        self.value = value
        self.pos_start = pos_start
        self.pos_end = pos_end
        self._type = _type
        
    def __repr__(self):
        return f'{self.name}'


class ExportModuleNode:
    def __init__(self, modules):
        self.modules = modules
        if isinstance(self.modules[0], dict):
            self.pos_start = self.modules[0]['pos_start']
            self.pos_end = self.modules[-1]['pos_end']
        else:
            self.pos_start = self.modules[0].pos_start
            self.pos_end = self.modules[-1].pos_end
        
    def __repr__(self):
        return f'{self.modules}'


class ModuleExport:
    def __init__(self, name, value):
        self.name = name
        self.id = name
        self.value = value
        self.pos_start = self.name.pos_start
        self.pos_end = self.value.pos_end
    

class ObjectCall:
    def __init__(self, left, op_tok, right, args):
        self.id = left
        self.left = left
        self.op_tok = op_tok
        self.right = right
        self.args = args
        self.pos_start = self.left.pos_start
        self.pos_end = self.right.pos_end

    def __repr__(self):
        return f'{self.left}'


class GetterNode:
    def __init__(self, left, right):
        self.id = left
        self.left = left
        self.right = right
        self.pos_start = self.left.pos_start
        self.pos_end = self.right.pos_end
        
    def __repr__(self):
        return f'{self.left}'

     
class BooleanNode:
    def __init__(self, tok):
        self.tok = tok
        self.value = self.tok.value
        if tok.value == 'true':
            self.value = True
        elif tok.value == 'false':
            self.value = False
        self.pos_start = self.tok.pos_start
        self.pos_end = self.tok.pos_end

    def __repr__(self):
        return f'{self.tok}'
    
    
class NoneNode:
    def __init__(self, tok):
        self.tok = tok
        self.id = tok
        self.value = self.tok.value
        self.pos_start = self.tok.pos_start
        self.pos_end = self.tok.pos_end

    def __repr__(self):
        return f'{self.tok}'   


class BinOpNode:
    def __init__(self, left_node, op_tok, right_node):
        res = ParseResult()
        self.left_node = left_node
        self.op_tok = op_tok
        self.right_node = right_node
        if self.left_node == '' or self.right_node == '' or self.op_tok == '':
            res.failure(Program.error()['Syntax']({
                'message': 'Invalid syntax',
                'pos_start': self.op_tok.pos_start,
                'pos_end': self.op_tok.pos_end,
                'exit': False
            }))
        self.pos_start = self.left_node.pos_start
        self.pos_end = self.right_node.pos_end

    def __repr__(self):
        return f'({self.left_node}, {self.op_tok}, {self.right_node})'


class UnaryOpNode:
    def __init__(self, op_tok, node):
        self.op_tok = op_tok
        self.node = node
        self.pos_start = self.op_tok.pos_start
        self.pos_end = node.pos_end

    def __repr__(self):
        return f'({self.op_tok}, {self.node})'


class IfNode:
    def __init__(self, cases, else_case):
        self.cases = cases
        self.else_case = else_case

        self.pos_start = self.cases[0][0].pos_start
        self.pos_end = (
            self.else_case or self.cases[len(self.cases) - 1])[0].pos_end

    def __repr__(self):
        return f'IfNode'


class ForNode:
    def __init__(self, var_name_token, start_value_node, end_value_node, step_value_node, body_node, return_null):
        self.var_name_token = var_name_token
        self.start_value_node = start_value_node
        self.end_value_node = end_value_node
        self.step_value_node = step_value_node
        self.body_node = body_node
        self.return_null = return_null

        self.pos_start = self.var_name_token.pos_start
        self.pos_end = self.body_node.pos_end


class InNode:
    def __init__(self, iterable_node, iterators, body_node, return_null):
        self.iterable_node = iterable_node
        self.iterators = iterators
        self.body_node = body_node
        self.return_null = return_null

        self.pos_start = self.iterable_node.pos_start
        self.pos_end = self.body_node.pos_end    
        
    
class WhileNode:
    def __init__(self, condition_node, body_node, return_null):
        self.condition_node = condition_node
        self.body_node = body_node
        self.return_null = return_null

        self.pos_start = self.condition_node.pos_start
        self.pos_end = self.body_node.pos_end


class MatchNode:
    def __init__(self, expression, cases, default_case):
        self.expression = expression
        self.cases = cases
        self.default_case = default_case

        self.pos_start = self.expression.pos_start
        if self.default_case:
            self.pos_end = self.default_case['pos_end']
        else:
            self.pos_end = self.cases[len(self.cases) - 1]['pos_end'] if self.cases else self.expression.pos_end


class RaiseNode:
    def __init__(self, expression):
        self.expression = expression
        self.pos_start = self.expression.pos_start
        self.pos_end = self.expression.pos_end
     

class DelNode:
    def __init__(self, identifier, expression):
        self.identifier = identifier
        self.expression = expression
        self.pos_start = self.identifier.pos_start
        self.pos_end = self.identifier.pos_end     
   

class AttemptNode:
    def __init__(self, attempt_statement, catches, finally_statement):
        self.attempt_statement = attempt_statement
        self.catches = catches
        self.finally_statement = finally_statement
        if self.finally_statement and self.finally_statement != {}:
            self.pos_start = self.attempt_statement['pos_start']
            self.pos_end = self.finally_statement['pos_end']
        elif self.catches and len(self.catches) > 0:
            self.pos_start = self.attempt_statement['pos_start']
            for catch in self.catches:
                if catch['pos_end']:
                    self.pos_end = catch['pos_end']
                    break
        else:
            self.pos_start = self.attempt_statement['pos_start']
            self.pos_end = self.attempt_statement['pos_end']
        

class FunctionNode:
    def __init__(self, def_name_token, args_name_tokens, body_node, implicit_return, default_values, type=None):
        self.def_name_token = def_name_token
        self.id = def_name_token
        self.args_name_tokens = args_name_tokens
        self.body_node = body_node
        self.implicit_return = implicit_return
        self.default_values = default_values
        self.type = type
        if self.def_name_token:
            self.pos_start = self.def_name_token.pos_start
        elif len(self.args_name_tokens) > 0:
            self.pos_start = self.args_name_tokens[0].pos_start
        else:
            self.pos_start = self.body_node.pos_start
        self.pos_end = self.body_node.pos_end


class ObjectNode:
    def __init__(self, object_name, properties, other=None):
        self.object_name = object_name
        self.id = object_name
        self.other = other
        if self.other != None and self.other['name'] == "module":
            self.type = "module"
            self.as_name = self.other['as_name']
        object_properties = []
        for prop in properties:
            object_properties.append(prop)
            if hasattr(prop['value'], 'pos_end'):
                self.pos_end = prop['value'].pos_end if len(
                properties) != 0 else self.object_name.pos_end
            else:
                self.pos_end = self.object_name.pos_end
        self.properties = object_properties
        self.pos_start = self.object_name.pos_start
        self.object = {
            'name': self.object_name.value,
            'properties': self.
            properties
        }
 
 
class DictNode:
    def __init__(self, properties, keys,values, pos_start, pos_end):
        self.properties = properties
        self.keys = keys
        self.values = values
        self.pos_start = pos_start
        self.pos_end = pos_end
 
 
class ModuleObject:
    def __init__(self, object_name, properties, other):
        self.object_name = object_name
        self.id = object_name
        self.other = other
        self.as_name = self.other['as_name']
        object_properties = []
        for prop in properties:
            object_properties.append(prop)
            if hasattr(prop['value'], 'pos_end'):
                self.pos_end = prop['value'].pos_end if len(
                properties) != 0 else self.object_name.pos_end
            else:
                self.pos_end = self.object_name.pos_end
        self.properties = object_properties
        self.pos_start = self.object_name.pos_start
        self.object = {
            'name': self.object_name.value,
            'properties': self.
            properties
        }       


class ClassNode:
    def __init__(self,class_name, class_constuctor_args,inherits_class_name, methods):
        self.id = class_name
        self.class_name = class_name
        self.class_constuctor_args = class_constuctor_args
        self.inherits_class_name = inherits_class_name
        self.methods = methods
        self.pos_start = self.class_name.pos_start
        self.pos_end = self.class_name.pos_end
        self.class_object = {
            'name': self.class_name.value,
            'properties': self.methods
        }
        
    def __repr__(self):
        return f'{self.class_name}'


class CallNode:
    def __init__(self, node_to_call, args_nodes, owner=None, type=None):
        self.id = node_to_call
        self.node_to_call = node_to_call
        self.args_nodes = args_nodes
        self.type = type
        self.owner = owner
        self.pos_start = self.node_to_call.pos_start
        if len(self.args_nodes) > 0:
            if hasattr(self.args_nodes[len(self.args_nodes) - 1], 'pos_end'):
                self.pos_end = self.args_nodes[len(self.args_nodes) - 1].pos_end 
            else:
                res = ParseResult()
                return res.failure(Program.error()['Syntax']({
                    'message': 'Invalid syntax, expected end of expression.',
                    'pos_start': self.pos_start,
                    'pos_end': self.pos_start,
                    'exit': False
                }))
                #\ if self.args_nodes[len(self.args_nodes) - 1] else 0
        else:
            self.pos_end = self.node_to_call.pos_end
    def __repr__(self):
        return f'{self.node_to_call}({self.args_nodes})'


class GetNode:
    def __init__(self, module_name, module_path):
        self.id = module_name
        self.module_name = module_name
        self.module_path = module_path
        self.pos_start = self.module_name.pos_start
        self.pos_end = self.module_name.pos_end
        
    def __repr__(self):
        return f'{self.module_name}'
    
    
class GetModuleNode:
    def __init__(self, module_name, module_path):
        self.id = module_name
        self.module_name = module_name
        self.module_path = module_path
        self.pos_start = self.module_name.pos_start
        self.pos_end = self.module_name.pos_end
        
    def __repr__(self):
        return f'{self.module_name}'


class ReturnNode:
    def __init__(self, node_to_return, pos_start, pos_end):
        self.node_to_return = node_to_return
        self.pos_start = pos_start
        self.pos_end = pos_end


class ContinueNode:
    def __init__(self, pos_start, pos_end):
        self.pos_start = pos_start
        self.pos_end = pos_end


class BreakNode:
    def __init__(self, pos_start, pos_end):
        self.pos_start = pos_start
        self.pos_end = pos_end


class ParseResult:
    def __init__(self):
        self.error = None
        self.node = None
        self.last_registered_advance_count = 0
        self.advance_count = 0
        self.to_reverse_count = 0

    def register_advancement(self):
        self.last_registered_advance_count = 1
        self.advance_count += 1

    def register(self, res):
        self.last_registered_advance_count = res.advance_count if res else 0
        self.advance_count += res.advance_count if res else 0
        if res:
            if res.error:
                self.error = res.error
        else:
            self.error = ''
        return res.node if res else ''

    def try_register(self, res):
        if res.error:
            self.to_reverse_count = res.advance_count
            return None
        return self.register(res)

    def success(self, node):
        self.node = node
        return self

    def failure(self, error):
        if not self.error or self.last_registered_advance_count == 0:
            self.error = error
        return self
    
    def noreturn(self):
        return self



class Parser:
    
    def __init__(self, tokens, file_name, position=None):
        self.tokens = tokens
        self.file_name = file_name
        self.position = position
        # get file name without extension
        #self.file_name_no_ext = self.file_name.split('/')[2].split('.')[0]
        self.tok_index = -1
        self.error = Program.error()
        self.error_detected = False
        self.advance()

    def advance(self):
        self.tok_index += 1
        self.update_current_tok()
        return self.current_token
        # if hasattr(self, 'current_token'):
        #     return self.current_token
        # else:
        #     sys.exit(1)

    def reverse(self, count=1):
        self.tok_index -= count
        self.update_current_tok()
        return self.current_token
        # if hasattr(self, 'current_token'):
        #     return self.current_token
        # else:
        #     sys.exit(1)

    def update_current_tok(self):
        if self.tok_index >= 0 and self.tok_index < len(self.tokens):
            self.current_token = self.tokens[self.tok_index]
        else:
            self.current_token = None

    def parse(self):
        res = self.statements()
        try:
            error = {
                'name': '',
                'pos_start': self.current_token.pos_start,
                'pos_end': self.current_token.pos_end,
                'message': "Invalid syntax or unknown token",
                'exit': False
            }
                
            if not res.error and self.current_token.type != tokenList.TT_EOF:
                tok_detected = self.current_token
                error['name'] = 'SynaxError'
                error['message'] = "Invalid syntax or unknown token"
                if tok_detected:
                    if self.error_detected != True:
                        self.error_detected = True
                        return res.failure(self.error['Default'](error))
            return res
        except:
            pass
        
    def property(self, tok):
        res = ParseResult()
        res.register_advancement()
        self.advance()
        if self.current_token.type != tokenList.TT_IDENTIFIER:
            return res.failure(self.error['Syntax']({
                'pos_start': self.current_token.pos_start,
                'pos_end': self.current_token.pos_end,
                'message': "Expected an identifier",
                'exit': False
            }))
        prop_name = self.current_token
        res.register_advancement()
        self.advance()
        return res.success(PropertyNode(tok, prop_name))
    
    def skipLines(self):
        res = ParseResult()
        res.register_advancement()
        self.advance()

    def statements(self):
        try:
            res = ParseResult()
            statements = []
            pos_start = self.current_token.pos_start.copy()

            while self.current_token.type == tokenList.TT_NEWLINE:
                res.register_advancement()
                self.advance()

            statement = res.register(self.statement())
            if res.error:
                return res
            statements.append(statement)

            more_statements = True

            while True:
                newline_count = 0
                while self.current_token.type == tokenList.TT_NEWLINE:
                    res.register_advancement()
                    self.advance()
                    newline_count += 1
                if newline_count == 0:
                    more_statements = False

                if not more_statements: break
                statement = res.try_register(self.statement())
                if not statement:
                    self.reverse(res.to_reverse_count)
                    more_statements = False
                    continue
                statements.append(statement)
            return res.success(ListNode(statements, pos_start, self.current_token.pos_end.copy()))

        except:
            pass

    def statement(self):
        res = ParseResult()
        pos_start = self.current_token.pos_start.copy()
        values = ()
        if self.current_token.matches(tokenList.TT_KEYWORD, 'return'):
            res.register_advancement()
            self.advance()
            expr = res.try_register(self.expr())
            values = (expr,)
            while self.current_token.type == tokenList.TT_COMMA:
                res.register_advancement()
                self.advance()
                values += (res.try_register(self.expr()),)
                expr = PairNode(values, pos_start, self.current_token.pos_end.copy())
            if not expr:
                self.reverse(res.to_reverse_count)
            return res.success(ReturnNode(expr, pos_start, self.current_token.pos_end.copy()))

        if self.current_token.matches(tokenList.TT_KEYWORD, 'continue'):
            res.register_advancement()
            self.advance()
            return res.success(ContinueNode(pos_start, self.current_token.pos_end.copy()))

        if self.current_token.matches(tokenList.TT_KEYWORD, 'break'):
            res.register_advancement()
            self.advance()
            return res.success(BreakNode(pos_start, self.current_token.pos_end.copy()))
        expr = res.register(self.expr())
        if res.error:
            return res.failure(self.error['Syntax']({
                'pos_start': pos_start,
                'pos_end': self.current_token.pos_start,
                'message': "invalid syntax",
                'exit': False
            }))
        return res.success(expr)
    
    def expr(self):
        res = ParseResult()
        if self.current_token.matches(tokenList.TT_KEYWORD, 'let') or self.current_token.matches(tokenList.TT_KEYWORD, 'final'):
            res.register_advancement()
            variable_keyword_token = "let" if self.current_token.matches(
                tokenList.TT_KEYWORD, 'let') else "final"
            self.advance()
            
            if(self.current_token.value in tokenList.KEYWORDS):
                if self.current_token.value == "fm":
                    return res.failure(self.error['Syntax']({
                        'pos_start': self.current_token.pos_start,
                        'pos_end': self.current_token.pos_end,
                        'message': "Invalid syntax or unknown token, possibly you meant to use 'fm' instead of 'fm' as an identifier?",
                        'exit': False
                    }))
                return res.failure(self.error['Syntax']({
                    'pos_start': self.current_token.pos_start,
                    'pos_end': self.current_token.pos_end,
                    'message': f"Cannot use keyword '{self.current_token.value}' as an identifier",
                    'exit': False
                }))
            if self.current_token.type == tokenList.TT_LPAREN:
                expr = res.register(self.expr())
                if res.error: return res
                values = expr.elements
                for val in values:
                    if isinstance(val, StringNode):
                        single_check_for_rest_operator = val.name.value.split('*')
                        if len(single_check_for_rest_operator) > 1 and single_check_for_rest_operator[0] == "":
                            self.error_detected = False
                    elif not isinstance(val, VarAccessNode):
                        self.error_detected = True
                        return res.failure(self.error['Syntax']({
                            'pos_start': val.pos_start,
                            'pos_end': val.pos_end,
                            'message': "expected an identifier",
                            'exit': False
                        }))
                var_values = ()
                if self.current_token.type != tokenList.TT_EQ:
                    return res.failure(self.error['Syntax']({
                        'pos_start': self.current_token.pos_start,
                        'pos_end': self.current_token.pos_end,
                        'message': "Expected '='",
                        'exit': False
                    }))
                res.register_advancement()
                self.advance()
                expr = res.register(self.expr())
                for value in values:
                    var_values += (value,)
                return res.success(VarAssignNode(var_values, expr, variable_keyword_token))
            
            if self.current_token.type == tokenList.TT_LSQBRACKET:
                expr = res.register(self.expr())
                if res.error:
                    return res
                values = expr.elements
                for val in values:
                    if isinstance(val, StringNode):
                        single_check_for_rest_operator = val.name.value.split('*')
                        if len(single_check_for_rest_operator) > 1 and single_check_for_rest_operator[0] == "":
                            self.error_detected = False
                    elif not isinstance(val, VarAccessNode):
                        self.error_detected = True
                        return res.failure(self.error['Syntax']({
                            'pos_start': val.pos_start,
                            'pos_end': val.pos_end,
                            'message': "expected an identifier",
                            'exit': False
                        }))
                var_values = []
                if self.current_token.type != tokenList.TT_EQ:
                    return res.failure(self.error['Syntax']({
                        'pos_start': self.current_token.pos_start,
                        'pos_end': self.current_token.pos_end,
                        'message': "Expected '='",
                        'exit': False
                    }))
                res.register_advancement()
                self.advance()
                expr = res.register(self.expr())
                for value in values:
                    var_values.append(value)
                return res.success(VarAssignNode(var_values, expr, variable_keyword_token))
            
            if self.current_token.type != tokenList.TT_IDENTIFIER:
                return res.failure(self.error['Syntax']({
                    'pos_start': self.current_token.pos_start,
                    'pos_end': self.current_token.pos_end,
                    'message': "Expected an identifier",
                    'exit': False
                }))
            var_name = self.current_token
            res.register_advancement()
            self.advance()
            if len(var_name.value) > 255:
                return res.failure(self.error['Syntax']({
                    'pos_start': self.current_token.pos_start,
                    'pos_end': self.current_token.pos_end,
                    'message': "Identifier too long",
                    'exit': False
                }))
           
           
            while self.current_token.type == tokenList.TT_COMMA:
                identifiers = [VarAccessNode(var_name)]
                values = []
                res.register_advancement()
                self.advance()
                comma_token = self.current_token
                if self.current_token.type == tokenList.TT_IDENTIFIER:
                    identifiers.append(VarAccessNode(self.current_token))
                    res.register_advancement()
                    self.advance()
                    while self.current_token.type == tokenList.TT_COMMA:
                        comma_token = self.current_token
                        res.register_advancement()
                        self.advance()
                        if self.current_token.type != tokenList.TT_IDENTIFIER:
                            self.error_detected = True
                            return res.failure(self.error['Syntax']({
                                'pos_start':comma_token.pos_start,
                                'pos_end': self.current_token.pos_end,
                                'message': "Expected an identifier after ','",
                                'exit': False
                            }))
                        while self.current_token.type == tokenList.TT_IDENTIFIER:
                            identifiers.append(VarAccessNode(self.current_token))
                            res.register_advancement()
                            self.advance()
                    if self.current_token.type == tokenList.TT_EQ:
                        res.register_advancement()
                        self.advance()
                        new_values = []
                        expr = res.register(self.expr())
                        values.append(expr)
                        if isinstance(expr, PairNode) or isinstance(expr, ListNode):
                            for val in expr.elements:
                                new_values.append(val)
                                values = new_values
                        else:
                            values = expr
                            
                        if  self.current_token.type == tokenList.TT_COMMA:
                            while self.current_token.type == tokenList.TT_COMMA:
                                res.register_advancement()
                                self.advance()
                                comma_token = self.current_token
                                values = []
                                values.append(res.register(self.expr()))
                                for v in values:
                                    if v == '':
                                        values.remove(v)
                            values_list = ListNode(values, comma_token.pos_start, comma_token.pos_end)
                            if isinstance(expr, DictNode) or isinstance(expr, ObjectNode):
                                values_list = expr
                            return res.success(VarAssignNode(identifiers, values_list, variable_keyword_token))
                        else:
                            values = expr
                            return res.success(VarAssignNode(identifiers, values, variable_keyword_token))
                    else:
                        none_values = []
                        tok = Token(tokenList.TT_KEYWORD, 'none', None, None)
                        for i in range(len(identifiers)):
                            none_values.append(tok)
                        values_list = ListNode(none_values, comma_token.pos_start, comma_token.pos_end)
                        return res.success(VarAssignNode(identifiers, values_list, variable_keyword_token))
                else:
                    self.error_detected = True
                    return res.failure(self.error['Syntax']({
                        'pos_start': comma_token.pos_start,
                        'pos_end': comma_token.pos_end,
